<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_container">

    <include layout="@layout/toolbar" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/started"
                />
            <TextView android:id="@+id/run_startedTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/latitude"
                />
            <TextView android:id="@+id/run_latitudeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/longitude"
                />
            <TextView android:id="@+id/run_longitudeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/altitude"
                />
            <TextView android:id="@+id/run_altitudeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5sp"
                android:text="@string/elapsed_time"
                />
            <TextView android:id="@+id/run_durationTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                />
        </TableRow>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            >
            <Button android:id="@+id/run_startButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                />
            <Button android:id="@+id/run_stopButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop"
                />
        </LinearLayout>
    </TableLayout>


</LinearLayout>